@@ -31,6 +31,10 @@ This component represents a
 <p>TODO: Almost everything.
 
 
-<hr>
+<p>
+Source code documentation for this component can be found
+<a href="../doxygen/html/classM88K__CPUComponent.html">here</a>.
+
+<p><br><hr>
 </body>
 </html>
