@@ -2,30 +2,30 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-  <title>GXemul: Components: dummy</title>
+  <title>GXemul: Components: mainbus</title>
   <meta name="robots" content="noarchive,nofollow,noindex">
 </head>
 <body>
 
 <!-- 10 lines header.  -->
 
-<h1>GXemul: Components: <tt>dummy</tt></h1>
+<h1>GXemul: Components: <tt>mainbus</tt></h1>
 <p>
 
 <a href="../">Back to the index.</a>
 <p><a href="../components.html">Back to the component index.</a>
 
 
-<p><br><h2><tt>dummy</tt> component</h2>
+<p><br><h2><tt>mainbus</tt> component</h2>
 
-The <tt>dummy</tt> component does not do anything. It can contain
-any other components. It is also used for the emulator's internal
-unit tests.
+The <tt>mainbus</tt> component forwards address/data requests from
+e.g. <a href="component_cpu.html">CPUs</a> to memory mapped components.
+A typical example of a memory mapped component is <a href="component_ram.html">RAM</a>.
 
 
 <p>
 Source code documentation for this component can be found
-<a href="../doxygen/html/classDummyComponent.html">here</a>.
+<a href="../doxygen/html/classMainbusComponent.html">here</a>.
 
 <p><br><hr>
 </body>
